--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "async": "^2.0.0-rc.5",
     "bcrypt": "^0.8.6",
     "connect-ensure-login": "^0.1.1",
+    "connect-mongo": "^1.3.2",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
@@ -32,7 +33,8 @@
     "passport-oauth2-client-password": "^0.1.2",
     "rc": "1.0.1",
     "sails": "~0.12.1",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-mongo": "^0.12.1"
   },
   "scripts": {
     "debug": "node debug app.js",
