--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "node ./node_modules/mocha/bin/mocha test/bootstrap.test.js test/integration/**/*.test.js"
   },
   "main": "app.js",
   "repository": {
@@ -47,5 +48,10 @@
     "url": "git://github.com/phillee/omni-house.git"
   },
   "author": "phillee",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "cheerio": "^0.22.0",
+    "mocha": "^3.2.0",
+    "supertest": "^3.0.0"
+  }
 }
