--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "author": "phillee",
   "license": "",
   "devDependencies": {
+    "chai": "^3.5.0",
     "cheerio": "^0.22.0",
     "mocha": "^3.2.0",
     "supertest": "^3.0.0"
