--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^0.8.6",
     "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^1.3.2",
+    "crypto-js": "^3.1.9-1",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
